[tool.poetry]
name = "browseterm-db"
version = "0.1.0"
description = "Postgres database setup for browseterm"
authors = ["Zim95 <shresthanamah@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
